--- a/1lessonV3.0/css/conf.css
+++ b/1lessonV3.0/css/conf.css
@@ -7,6 +7,12 @@ html, body{
 	height: 100%;
 	min-width: 700px;
 	min-height: 500px;
+
+}
+
+body {
+	background:  #043c61 url("../images/intro.jpg") repeat;
+	background-size: 100%;
 	font-family: 'Oswald', sans-serif;
 	font-size: 15px;
 	line-height: 1.6;
@@ -24,26 +30,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* wrapper */
-.wrapper{
-	height: 100vh;
-	background:
-			url("../images/intro.jpg") center
-			no-repeat;
-	background-size: cover;
+
+.wrapper {
+	padding: 0 10px;
+	margin: 0 auto;
+	min-height: 100%;
+	position: relative;
+
 }
 
 /* header */
 .header {
-	position: fixed;
-	width: 100%;
-	height: 95px;
+
 }
 
 .heder_inner {
 	display: flex;
 	height: 55px;
 	padding: 15px;
-	margin: 10px;
+	margin-top: 10px;
 
 	justify-content: space-between;
 }
@@ -64,35 +69,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* row */
-/*.row:after {
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
-}*/
+
 .row {
-	position: fixed ;
-	width: 100%;
-	top: 95px;
-	bottom: 100px;
+	overflow: hidden;
+
 }
 
 /* sidebar */
 
 .sidebar {
 	font-size: 15px;
-	width: 25%;
-	max-width: 195px;
-	height: 100%;
 	float: left;
+	width: 220px;
+	padding-bottom: 10px;
+	padding-left: 10px;
 }
 
 .sidebar_inner {
 	line-height: 2.5;
 	height: -webkit-fill-available;
-	margin: 10px 10px 0px 10px;
+	margin-top: 10px;
 	padding: 10px;
 }
 
@@ -108,13 +104,13 @@ h1, h2, h3, h4, h5, h6 {
 /* content */
 
 .content {
-	width: 75%;
-	float: left;
-	justify-content: space-between
+	overflow: hidden;
+	padding-left: 10px;
 }
 
 .inner_content {
 	margin: 10px 10px 10px 0px;
+	padding: 10px;
 	width: auto;
 	min-width: 400px;
 }
@@ -122,20 +118,18 @@ h1, h2, h3, h4, h5, h6 {
 /* menu */
 .nav {
 	margin: 10px 10px 10px 0px;
-	width: auto;
-	min-width: 400px;
-	height: 50px;
-	font-size: 15px;
+	padding: 10px;
 	text-transform: uppercase;
 }
+
 .nav_inner {
+	align-content: center;
 	justify-content: center;
- }
+}
+
 
 .nav_link {
-	display: inline-block;
-	vertical-align: top;
-	margin: 0 15px;
+	margin: 0 20px;
 	position: relative;
 	color: #0000EE;
 	text-decoration: none;
@@ -167,16 +161,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* footer */
 .footer {
-	position: fixed;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
+	margin-bottom: 10px;
 	padding: 10px;
-	height: 80px;
 }
 
 .footer_inner {
-	display: flex;
 	text-align: center;
 	justify-content: center;
 }
