--- a/homework2/calculatorofthecost/css/css.css
+++ b/homework2/calculatorofthecost/css/css.css
@@ -1,15 +1,14 @@
 
-html, body{
+html, body {
     width: 560px;
     min-width: 560px;
     margin: auto;
     height: auto;
     min-height: 410px;
-
 }
 
 body {
-    background: #deddf0 ;
+    background: #deddf0;
     color: #292120;
     border: 2px dashed #819ea0;
 }
@@ -18,11 +17,7 @@ h1 {
     text-align: center;
 }
 
-.result{
-
-}
-
-.inner_result{
+.inner_result {
     width: max-content;
     margin: auto;
     padding: 20px;
@@ -30,7 +25,7 @@ h1 {
 }
 
 .my_form {
-    width: 400px;
+    width: max-content;
     padding: 10px;
     margin: auto;
 }
