--- a/homework3/electronicapplicationform/css/style.css
+++ b/homework3/electronicapplicationform/css/style.css
@@ -1,16 +1,17 @@
 
 html, body {
-    width: 560px;
+    width: 700px;
     min-width: 560px;
     margin: auto;
     height: auto;
-    min-height: 410px;
+    min-height: 500px;
 }
 
 body {
-    background: #deddf0;
+    background: #84f096;
     color: #292120;
     border: 2px dashed #819ea0;
+    position: relative;
 }
 
 h1 {
@@ -24,8 +25,53 @@ h1 {
     text-align: left;
 }
 
+/* form */
 .my_form {
-    width: max-content;
-    padding: 10px;
+    width: auto;
+    padding: 20px;
     margin: auto;
 }
+
+.size {
+    height: 260px;
+    width: 33.3%;
+    margin-bottom: 20px;
+}
+
+.ferst {
+    float: left;
+    overflow: hidden;
+}
+
+.sex {
+    float: left;
+    overflow: hidden;
+}
+
+.courses {
+    float: left;
+    overflow: hidden;
+}
+
+.other {
+    float: bottom;
+    width: max-content;
+    overflow: hidden;
+    margin: auto;
+}
+
+.button {
+    width: max-content;
+    overflow: hidden;
+    margin: auto;
+}
+ .sources {
+     height: max-content;
+     position: relative;
+ }
+ .left, .right {
+     height: max-content;
+     float: left;
+ }
+
+.invalid { border-color: red; }
