--- a/homework3/electronicapplicationform/css/style.css
+++ b/homework3/electronicapplicationform/css/style.css
@@ -2,7 +2,7 @@
 html, body {
     width: 700px;
     min-width: 560px;
-    margin: auto;
+    margin: 5px auto;
     height: auto;
     min-height: 500px;
 }
@@ -10,7 +10,7 @@ html, body {
 body {
     background: #84f096;
     color: #292120;
-    border: 2px dashed #819ea0;
+    border: 5px outset #819ea0;
     position: relative;
 }
 
