--- a/homework3-1/electronic-app-form-servlet/web/css/style.css
+++ b/homework3-1/electronic-app-form-servlet/web/css/style.css
@@ -31,6 +31,11 @@ td {
     border: 1px solid;
 }
 
+.result_table{
+    width: 400px;
+    margin: 30px auto;
+}
+
 .answer_outer {
     width: 100%;
     height: 100%;
